methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:5: error: not found: value cote
def carre() {coin(Color.RED);cote(Color.BLUE);cote(Color.GREEN);cote(Color.YELLOW)}
                             ^PatternPicture:5: error: not found: value cote
def carre() {coin(Color.RED);cote(Color.BLUE);cote(Color.GREEN);cote(Color.YELLOW)}
                                              ^PatternPicture:5: error: not found: value cote
def carre() {coin(Color.RED);cote(Color.BLUE);cote(Color.GREEN);cote(Color.YELLOW)}
                                                                ^